// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render accessible tabs 1`] = `
Array [
  <nav
    aria-label="accessible Tabs example"
    class="pf-c-tabs"
    data-ouia-component-id="3"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="accessibleTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <a
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__link"
          href="#/items/1"
          id="pf-tab-0-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </a>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <a
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          href="#/items/2"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </a>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <a
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          href="#/items/3"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </a>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </nav>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render box tabs 1`] = `
Array [
  <div
    class="pf-c-tabs pf-m-box"
    data-ouia-component-id="2"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="boxTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__link"
          id="pf-tab-0-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-3-tab4"
          class="pf-c-tabs__link"
          id="pf-tab-3-tab4"
        >
          <span
            class="pf-c-tabs__item-icon"
          >
            <i>
              4
            </i>
          </span>
           
          <span
            class="pf-c-tabs__item-text"
          >
            Users
          </span>
            
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
  <section
    aria-labelledby="pf-tab-3-tab4"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-3-tab4"
    role="tabpanel"
    tabindex="0"
  >
    Tab 4 section
  </section>,
]
`;

exports[`should render filled tabs 1`] = `
Array [
  <div
    class="pf-c-tabs pf-m-fill"
    data-ouia-component-id="4"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="filledTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__link"
          id="pf-tab-0-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render secondary tabs 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="5"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="primarieTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-primarieTabs"
          class="pf-c-tabs__link"
          id="pf-tab-0-primarieTabs"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-primarieTabs"
    class="pf-c-tab-content"
    id="pf-tab-section-0-primarieTabs"
    role="tabpanel"
    tabindex="0"
  >
    <div
      class="pf-c-tabs pf-m-secondary"
      data-ouia-component-id="6"
      data-ouia-component-type="PF4/Tabs"
      data-ouia-safe="true"
      id="secondaryTabs"
    >
      <button
        aria-hidden="false"
        aria-label="Scroll left"
        class="pf-c-tabs__scroll-button pf-m-secondary"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </button>
      <ul
        class="pf-c-tabs__list"
      >
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-10-secondary tab1"
            class="pf-c-tabs__link"
            id="pf-tab-10-secondary tab1"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              "Secondary Tab item 1"
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-11-secondary tab2"
            class="pf-c-tabs__link"
            id="pf-tab-11-secondary tab2"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              "Secondary Tab item 2"
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-12-secondary tab3"
            class="pf-c-tabs__link"
            id="pf-tab-12-secondary tab3"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              "Secondary Tab item 3"
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-hidden="false"
        aria-label="Scroll right"
        class="pf-c-tabs__scroll-button pf-m-secondary"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </button>
    </div>
    <section
      aria-labelledby="pf-tab-10-secondary tab1"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-10-secondary tab1"
      role="tabpanel"
      tabindex="0"
    >
      Secondary Tab 1 section
    </section>
    <section
      aria-labelledby="pf-tab-11-secondary tab2"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-11-secondary tab2"
      role="tabpanel"
      tabindex="0"
    >
      &gt; Secondary Tab 2 section
    </section>
    <section
      aria-labelledby="pf-tab-12-secondary tab3"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-12-secondary tab3"
      role="tabpanel"
      tabindex="0"
    >
      &gt; Secondary Tab 3 section
    </section>
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    &gt; Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render simple tabs 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="0"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="simpleTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__link"
          id="pf-tab-0-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-3-tab4"
          class="pf-c-tabs__link"
          id="pf-tab-3-tab4"
        >
          <span
            class="pf-c-tabs__item-icon"
          >
            <i>
              4
            </i>
          </span>
           
          <span
            class="pf-c-tabs__item-text"
          >
            Users
          </span>
            
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
  <section
    aria-labelledby="pf-tab-3-tab4"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-3-tab4"
    role="tabpanel"
    tabindex="0"
  >
    Tab 4 section
  </section>,
]
`;

exports[`should render tabs with eventKey Strings 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="7"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="eventKeyTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-one-tab1"
          class="pf-c-tabs__link"
          id="pf-tab-one-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Secondary Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-two-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-two-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Secondary Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-three-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-three-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Secondary Tab item 3"
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-one-tab1"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-one-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-two-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-two-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-three-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-three-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render tabs with separate content 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="8"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="separateTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="refTab1Section"
          class="pf-c-tabs__link"
          id="pf-tab-0-separateTabs"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            Tab item 1
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="refTab2Section"
          class="pf-c-tabs__link"
          id="pf-tab-1-separateTabs"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            Tab item 2
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="refTab3Section"
          class="pf-c-tabs__link"
          id="pf-tab-2-separateTabs"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            Tab item 3
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <div>
    <section
      aria-label="Tab item 1"
      class="pf-c-tab-content"
      id="refTab1Section"
      role="tabpanel"
      tabindex="0"
    >
      Tab 1 section
    </section>
    <section
      aria-label="Tab item 2"
      class="pf-c-tab-content"
      hidden=""
      id="refTab2Section"
      role="tabpanel"
      tabindex="0"
    >
      Tab 2 section
    </section>
    <section
      aria-label="Tab item 3"
      class="pf-c-tab-content"
      hidden=""
      id="refTab3Section"
      role="tabpanel"
      tabindex="0"
    >
      Tab 3 section
    </section>
  </div>,
]
`;

exports[`should render vertical tabs 1`] = `
Array [
  <div
    class="pf-c-tabs pf-m-vertical"
    data-ouia-component-id="1"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="verticalTabs"
  >
    <button
      aria-hidden="false"
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__link"
          id="pf-tab-0-tab1"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 1"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__link"
          id="pf-tab-1-tab2"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 2"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__link"
          id="pf-tab-2-tab3"
        >
          <span
            class="pf-c-tabs__item-text"
          >
            "Tab item 3"
          </span>
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-3-tab4"
          class="pf-c-tabs__link"
          id="pf-tab-3-tab4"
        >
          <span
            class="pf-c-tabs__item-icon"
          >
            <i>
              4
            </i>
          </span>
           
          <span
            class="pf-c-tabs__item-text"
          >
            Users
          </span>
            
        </button>
      </li>
    </ul>
    <button
      aria-hidden="false"
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
  <section
    aria-labelledby="pf-tab-3-tab4"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-3-tab4"
    role="tabpanel"
    tabindex="0"
  >
    Tab 4 section
  </section>,
]
`;
